--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,16 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
+    "axios": "^1.9.0",
     "body-parser": "^2.2.0",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "mustache": "^4.2.0",
+    "nodemon": "^3.1.10",
+    "pg": "^8.15.6",
+    "xlsx": "^0.18.5"
   }
 }
