--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "mustache": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
