--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "mustache": "^4.2.0",
     "nodemon": "^3.1.10",
+    "path": "^0.12.7",
     "pg": "^8.15.6",
     "xlsx": "^0.18.5"
   }
